# turntable

./: .gitignore  .mcp.json  CLAUDE.md  DESIGN.md  DIALECT.md  LLAMINGTON.md  Makefile  PLUGINS.md  README.md  go.mod  go.sum
.turntable/dashboards/: flow-story.yaml  my-system-state.yaml  sales-overview.yaml
cmd/octoparser/: main.go
cmd/turntable/: main.go
docs/: azure-monitor-design.md  dashboards-design.md  latex-header.tex  mcp-server-design.md  style.css
examples/: aws-config.md  azure-logs.md  azure-monitor.md  azure-resource-graph.md  cost.md  honeycomb.md  honeycomb_seed.py  init_sqlite.sql  kubernetes.md  octoparser.yaml  run.sh  turntable.yaml
examples/data/: customers.json  orders.csv  products.yaml  regions.xlsx
examples/plugins/: build.sh
internal/cli/: cli.go  cli_test.go  connspec.go  connspec_test.go  crlf_test.go  dashboard.go  dashboard_test.go  dashrender.go  dashrender_test.go  lineedit.go  matview.go  matview_test.go  mcp.go  mcp_test.go  repl.go  repl_test.go  serve.go  serve_test.go  snapshot.go  view.go  webui.html
internal/config/: config.go  config_test.go
internal/connector/: connector.go  helpers.go  registry.go
internal/engine/: aggacc.go  aggspill.go  aggspill_test.go  engine.go  eval.go  eval_test.go  funcs.go  ops.go  ops_test.go  types.go  value.go
internal/loginfer/: loginfer.go  loginfer_test.go
internal/matviewstore/: matviewstore.go  matviewstore_test.go
internal/parquetw/: parquetw.go  parquetw_test.go
internal/plan/: aggorder_test.go  (+22 more)
sdk/: publish.sh
sdk/python/: README.md  pyproject.toml  ttplugin.py
(+137 files in other folders)
