# Packaging for the Python plugin SDK — a single stdlib-only module. Intended
# to be split into its own repository (and published) eventually; while in this
# repo, plugins import it by path (see examples/plugins/pyfiles).
[project]
name = "ttplugin"
version = "0.1.0"
description = "SDK for writing turntable plugin connectors in Python"
requires-python = ">=3.9"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["ttplugin"]
